--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,6 +110,8 @@ jobs:
           tac $TMPFILE > src/CMakeLists.txt
           rm $TMPFILE
           echo "SETUP_TARGET_FOR_COVERAGE_LCOV(NAME codecov EXECUTABLE \${CMAKE_BUILD_TOOL} check)" >> testsuite/CMakeLists.txt
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1 
       - name: Build GDL
         run: |
           .ci/build_gdl.sh build
