--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,11 +122,12 @@ jobs:
           path: gdl-*-${{ matrix.deps }}.zip
           name: GDL (${{ matrix.os }}, ${{ matrix.deps }}, ${{ matrix.configuration }})
       - name: Upload Release Assets
-        if: ${{ github.event_name }} == 'workflow_dispatch' && matrix.os == 'macos-latest'
+        if: ${{ github.event_name }} == 'workflow_dispatch' && ${{ matrix.os }} == 'macos-latest'
         uses: ncipollo/release-action@v1
         with:
           artifacts: "gdl-*-${{ matrix.deps }}.zip"
-          name: Weekly Release (unstable)
+          name: Weekly Binary Release (unstable)
+          body: Weekly Binary Release (unstable)
           prerelease: true
           allowUpdates: true
           replacesArtifacts: true
