--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Create Build Matrix (Windows)
       id: set-matrix-windows
       run: |
-        if [[ '${{ github.event_name }}' == "workflow_dispatch" ]]; then 
+        if [[ '${{ github.event_name }}' == "schedule" ]]; then 
             matrix="{deps: ['full-msmpi', 'full', 'mini'], arch: ['x86_64', 'i686'], configuration: ['Release']}"
         else
             matrix="{deps: ['full-msmpi'], arch: ['x86_64'], configuration: ['Debug']}"
@@ -32,14 +32,14 @@ jobs:
     - name: Create Build Matrix (Linux/macOS)
       id: set-matrix-others
       run: |
-        if [[ '${{ github.event_name }}' == "workflow_dispatch" ]]; then 
+        if [[ '${{ github.event_name }}' == "schedule" ]]; then 
             matrix="{os: ['ubuntu-latest', 'macos-latest'], deps: ['full', 'mini'], configuration: ['Release'], include: [{os: 'ubuntu-latest', deps: 'full', configuration: 'Debug', codecov: true}]}"
         else
             matrix="{os: ['ubuntu-latest', 'macos-latest'], deps: ['full'], configuration: ['Debug']}"
         fi
         echo "::set-output name=matrix-others::$matrix"
     - name: Remove Release (scheduled build only)
-      if: github.event_name == 'workflow_dispatch'
+      if: github.event_name == 'schedule'
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
       with:
         delete_release: true
@@ -130,7 +130,7 @@ jobs:
           path: gdl-*-${{ matrix.deps }}.zip
           name: GDL (${{ matrix.os }}, ${{ matrix.deps }}, ${{ matrix.configuration }})
       - name: Upload Release Assets
-        if: github.event_name == 'workflow_dispatch' && matrix.os == 'macos-latest'
+        if: github.event_name == 'schedule' && matrix.os == 'macos-latest'
         uses: ncipollo/release-action@v1
         with:
           artifacts: "gdl-*-${{ matrix.deps }}.zip"
@@ -247,7 +247,7 @@ jobs:
           name: GDL (windows-latest, ${{ matrix.deps }}, ${{ matrix.arch }}, ${{ matrix.configuration }})
           path: gdl-*-${{ matrix.deps }}.zip
       - name: Upload Release Assets
-        if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'schedule'
         uses: ncipollo/release-action@v1
         with:
           artifacts: "gdlsetup-*-${{ matrix.deps }}.exe,gdl-*-${{ matrix.deps }}.zip"
