--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -211,9 +211,25 @@ jobs:
         shell: msys2 {0}
         run: |
           rsync -rt --no-t --inplace /cache/ /
+      - name: Setup Python (64 bit)
+        uses: actions/setup-python@v2
+        if: matrix.arch == 'x86_64' && (matrix.deps == 'full-msmpi' || matrix.deps == 'full')
+        with:
+          python-version: '3.x'
+          architecture: x64
+      - name: Setup Python (32 bit)
+        uses: actions/setup-python@v2
+        if: matrix.arch == 'i686' && (matrix.deps == 'full-msmpi' || matrix.deps == 'full')
+        with:
+          python-version: '3.x'
+          architecture: x86
+      - name: Install Numpy
+        if: matrix.deps == 'full-msmpi' || matrix.deps == 'full'
+        run: pip install numpy
       - name: Build GDL
         shell: msys2 {0}
         run: |
+          export PATH=`cygpath "${pythonLocation}"`:$PATH
           .ci/build_gdl.sh build
       - name: Package GDL
         shell: msys2 {0}  
