--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -92,7 +92,7 @@ if(OPENMP_FOUND)
 endif()
 add_library(test_ce SHARED EXCLUDE_FROM_ALL libtest_ce.cpp)
 add_custom_target(check COMMAND ${CMAKE_BUILD_TOOL} test DEPENDS launchtest test_ce gdl)
-set(LAUNCHTESTLOCATION "$<TARGET_FILE_DIR:launchtest>")
+set(LAUNCHTESTLOCATION "$<TARGET_FILE:launchtest>")
 if (GDLDEV)
   file(GLOB TESTLIST "${BASE_SOURCE}/testsuite/test_*.pro")
 else()
