simpler python search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -870,52 +870,10 @@ if(PYTHON OR PYTHON_MODULE)
     if(PYTHON_MODULE)
         set(PYTHON_MODULEMSG "Use -DPYTHON_MODULE=OFF to disable Python module.\n")
     endif(PYTHON_MODULE)
-    if(PYTHONDIR)
-        find_library(PYTHONLIBS 
-                  NAMES python${PYTHONVERSION}
-                  PATHS ${PYTHONDIR} 
-                  PATH_SUFFIXES lib lib/python${PYTHONVERSION}/config 
-                  NO_DEFAULT_PATH NO_CMAKE_PATH
-                )
-                string(COMPARE NOTEQUAL "${PYTHONLIBS}" "PYTHONLIBS-NOTFOUND" PYTHONLIBS_FOUND) 
-                if (NOT PYTHONLIBS_FOUND)
-                  message(FATAL_ERROR "Python libraries not found in ${PYTHONDIR}.")
-                else()
-                  set(PYTHON_LIBRARIES "${PYTHONLIBS}")
-                  message("-- Found Python libs: ${PYTHONLIBS}")
-                endif()
-                find_path(PYTHON_INCLUDE_DIRS 
-                  NAMES Python.h 
-                  PATHS ${PYTHONDIR}
-                  PATH_SUFFIXES include include/python${PYTHONVERSION}
-                  NO_DEFAULT_PATH NO_CMAKE_PATH
-                )
-                string(COMPARE NOTEQUAL "${PYTHONLIBS}" "PYTHON_INCLUDE_DIRS-NOTFOUND" PYTHONHEADERS_FOUND) 
-                if (PYTHONHEADERS_FOUND)
-                  message("-- Found Python headers: ${PYTHON_INCLUDE_DIRS}")
-                  set(PYTHON_INCLUDES "${PYTHON_INCLUDE_DIRS}")
-                else()
-                  message(FATAL_ERROR "Python headers not found in ${PYTHONDIR}.")
-                endif()
-                find_program(PYTHON_EXECUTABLE NAMES python${PYTHONVERSION} PATHS ${PYTHONDIR} PATH_SUFFIXES bin NO_DEFAULT_PATH NO_CMAKE_PATH)
-                string(COMPARE NOTEQUAL "${PYTHON_EXECUTABLE}" "PYTHON_EXECUTABLE-NOTFOUND" PYTHON_EXECUTABLE_FOUND) 
-                if(NOT PYTHON_EXECUTABLE_FOUND)
-                  message(FATAL_ERROR "Python executable not found in ${PYTHONDIR}.")
-                else()
-                  message("-- Found Python executable: ${PYTHON_EXECUTABLE}")
-                endif()
-    else()
-#        if(NOT PYTHONVERSION)
-#            set(PYTHONVERSION 3)
-#        endif()
-        find_package(PythonInterp ${PYTHONVERSION})
-        find_package(PythonLibs ${PYTHONVERSION})
-    endif()
-    set(USE_PYTHON ${PYTHONLIBS_FOUND})
-    if(PYTHONLIBS_FOUND)
-        find_package(Python COMPONENTS Interpreter Development NumPy)
+    find_package(Python ${PYTHONVERSION} COMPONENTS Interpreter Development NumPy)
+    if(PYTHON_FOUND)
         if(NOT Python_NumPy_FOUND)
-            message(FATAL_ERROR "Python numpy package was not found.\n"
+            message(FATAL_ERROR "Python NumPy package was not found.\n"
             "${PYTHONMSG} ${PYTHON_MODULEMSG}")
         endif()
         set(LIBRARIES ${LIBRARIES} ${PYTHON_LIBRARIES})
