backward compatibility for cmake > 3.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,14 @@
 #  (at your option) any later version.
 #
 
-cmake_minimum_required(VERSION 3.14 FATAL_ERROR) # 3.14: required for finding numpy.
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
 # requirement for CMAKE_CXX_STANDARD (3.2 for Apple, 3.1 for non-Apple: https://public.kitware.com/Bug/bug_relationship_graph.php?bug_id=15355)
 if (${CMAKE_VERSION} VERSION_LESS "3.2")
   string(FIND "${CMAKE_CXX_FLAGS}" "-std=c++11" tmp)
   if(tmp LESS 0)
-    message(FATAL_ERROR "please upgrade CMake to a version 3.2 or higher OR rerun cmake with -DCMAKE_CXX_FLAGS=\"-std=c++11\"")
+    #message(FATAL_ERROR "please upgrade CMake to a version 3.2 or higher OR rerun cmake with -DCMAKE_CXX_FLAGS=\"-std=c++11\"")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
   endif()
 else()
   set(CMAKE_CXX_STANDARD 11)
@@ -871,7 +872,21 @@ if(PYTHON OR PYTHON_MODULE)
     if(PYTHON_MODULE)
         set(PYTHON_MODULEMSG "Use -DPYTHON_MODULE=OFF to disable Python module.\n")
     endif(PYTHON_MODULE)
-    find_package(Python ${PYTHONVERSION} COMPONENTS Interpreter Development NumPy)
+    if (${CMAKE_VERSION} VERSION_LESS "3.12")
+        find_package(PythonInterp ${PYTHONVERSION})
+        find_package(PythonLibs ${PYTHONVERSION})
+        execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "import numpy as np; print(np.get_include())" RESULT_VARIABLE ret OUTPUT_VARIABLE Python_NumPy_INCLUDE_DIRS ERROR_QUIET)
+        if (PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
+            set(Python_LIBRARIES ${PYTHON_LIBRARIES})
+            set(Python_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS})
+            set(PYTHON_FOUND ${PYTHONLIBS_FOUND})
+        endif()
+        if (ret EQUAL 0)
+            set(Python_NumPy_FOUND TRUE)
+        endif()
+    else()
+        find_package(Python ${PYTHONVERSION} COMPONENTS Interpreter Development NumPy)
+    endif()
     if(PYTHON_FOUND)
         if(NOT Python_NumPy_FOUND)
             message(FATAL_ERROR "Python NumPy package was not found.\n"
