--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1083,9 +1083,13 @@ if(NOT PYTHON_MODULE)
 endif(NOT PYTHON_MODULE)
 
 # display macro
-macro(MODULE MOD NAME)
+macro(MODULE MOD LIBNAME NAME)
     if(${MOD})
-        message("${NAME}         ON (libs:${${MOD}_LIBRARIES}; headers:${${MOD}_INCLUDE_DIR})")
+      if(${LIBNAME}_INCLUDE_DIR)
+        message("${NAME}         ON (libs:${${LIBNAME}_LIBRARIES}; headers:${${LIBNAME}_INCLUDE_DIR})")
+      else()
+        message("${NAME}         ON (libs:${${LIBNAME}_LIBRARIES}; headers:${${LIBNAME}_INCLUDE_DIRS})")
+      endif()
     else(${MOD})
         message("${NAME}         OFF")
     endif(${MOD})
@@ -1150,58 +1154,52 @@ if(OPENMP AND OPENMP_FOUND)
 else(OPENMP AND OPENMP_FOUND)
     message("OpenMP support         OFF")
 endif(OPENMP AND OPENMP_FOUND)
-set(WXWIDGETS_LIBRARIES ${wxWidgets_LIBRARIES})
-module(WXWIDGETS "WxWidgets     ")
+module(WXWIDGETS wxWidgets "WxWidgets     ")
 if (GRAPHICSMAGICK_FOUND)
-  module(GRAPHICSMAGICK "GRAPHICSMAGICK")
+  module(GRAPHICSMAGICK GRAPHICSMAGICK "GRAPHICSMAGICK")
 else (GRAPHICSMAGICK_FOUND)
-  module(MAGICK    "ImageMagick   ")
+  module(MAGICK    MAGICK    "ImageMagick   ")
 endif (GRAPHICSMAGICK_FOUND)
-module(TIFF      "TIFF          ")
-module(GEOTIFF   "GeoTIFF       ")
-module(NETCDF    "NetCDF        ")
-module(HDF       "HDF4          ")
-module(HDF5      "HDF5          ")
-module(FFTW      "FFTW          ")
-set(MPI_LIBRARIES ${MPI_LIBRARIES})
-module(MPI       "MPI           ")
-module(LIBPROJ   "PROJ          ")
-module(PYTHON    "Python        ")
-module(UDUNITS2  "UDUNITS-2     ")
-module(EIGEN3    "EIGEN3        ")
-
-module(GRIB      "GRIB          ")
+module(TIFF      TIFF      "TIFF          ")
+module(GEOTIFF   GEOTIFF   "GeoTIFF       ")
+module(NETCDF    NETCDF    "NetCDF        ")
+module(HDF       HDF       "HDF4          ")
+module(HDF5      HDF5      "HDF5          ")
+module(FFTW      FFTW      "FFTW          ")
+module(MPI       MPI       "MPI           ")
+module(LIBPROJ   LIBPROJ   "PROJ          ")
+module(PYTHON    Python    "Python        ")
+module(UDUNITS2  UDUNITS2  "UDUNITS-2     ")
+module(EIGEN3    EIGEN3    "EIGEN3        ")
+module(GRIB      GRIB      "GRIB          ")
 # set(QHULL_LIBRARIES ${QHULL_LIBRARIES})
 # module(QHULL     "QHULL         ")
-set(GLPK_LIBRARIES ${GLPK_LIBRARIES})
-module(GLPK      "GLPK          ")
-set(SHAPELIB_LIBRARIES ${SHAPELIB_LIBRARIES})
-module(SHAPELIB   "SHAPELIB      ")
-set(EXPAT_LIBRARIES ${EXPAT_LIBRARIES})
-module(EXPAT     "EXPAT         ")
+module(GLPK      GLPK      "GLPK          ")
+module(SHAPELIB  SHAPELIB  "SHAPELIB      ")
+module(EXPAT     EXPAT     "EXPAT         ")
 if (INTERACTIVE_GRAPHICS) 
 if( CYGWIN OR NOT WIN32  )
-  module(X11     "Xlib          ")
+  module(X11     X11     "Xlib          ")
 endif( CYGWIN OR NOT WIN32)
 endif (INTERACTIVE_GRAPHICS)
-module(PNGLIB    "libpng        ")
+module(PNGLIB    PNG       "libpng        ")
 message("")
 message(STATUS "Mandatory modules")
 set(PLPLOT ON)
 set(READLINE ON)
 set(GSL ON)
 set(ZLIB ON)
-set(RPC ON)
 if(NOT WIN32)
   set(CURSES ON)
-endif(NOT WIN32)
-module(PLPLOT    "Plplot        ")
-module(READLINE  "GNU Readline  ")
-module(GSL       "GSL           ")
-module(ZLIB      "Zlib          ")
-module(RPC       "RPC           ")
+  set(RPC ON)
+  endif(NOT WIN32)
+module(PLPLOT    PLPLOT    "Plplot        ")
+module(READLINE  READLINE  "GNU Readline  ")
+module(GSL       GSL       "GSL           ")
+module(ZLIB      ZLIB      "Zlib          ")
 if(NOT WIN32)
-  module(CURSES    "(N)curses     ")
+  module(CURSES    CURSES    "(N)curses     ")
+  module(RPC       RPC       "RPC           ")
 endif(NOT WIN32)
 message("")
 message("GDLDEV mode: ${GDLDEV} (use -DGDLDEV=ON to enable work-in-progress tests)")
@@ -1211,7 +1209,7 @@ message("")
 if ((DEFINED ENV{CONDA_PREFIX}) OR (DEFINED ENV{CONDA_EXE}))
   message("==========================================================================\n"
           "== WARNING !!        {Ana|mini|}conda activated env. detected !         ==\n"
-	  "== To avoid possible conflicts between local libs. and the sytem libs,  ==\n"
+          "== To avoid possible conflicts between local libs. and the sytem libs,  ==\n"
           "== we advice you to remove Conda related paths from you $PATH           ==\n"
           "== or run this CMake file in a clean terminal without Conda Env.        ==\n"
           "==========================================================================\n")
