patch for posix os

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -10,10 +10,15 @@ else()
   file(READ "${BASE_SOURCE}/testsuite/LIST" TESTLIST)
 endif()
 
+set(GDL_BINARY ${BASE_BINARY}/src/gdl)
+if(WIN32 AND NOT CYGWIN)
+  set(GDL_BINARY ${GDL_BINARY}.exe)
+endif()
+
 string(REGEX MATCHALL "test[_a-zA-Z0-9]+\\.pro" TESTS ${TESTLIST})
 foreach(TEST ${TESTS})
   string(REGEX REPLACE "\\.pro$" "" TESTNAME ${TEST})
-  add_test(NAME ${TEST} COMMAND ${BASE_BINARY}/src/gdl.exe -quiet -e ${TESTNAME})
+  add_test(NAME ${TEST} COMMAND ${GDL_BINARY} -quiet -e ${TESTNAME})
 endforeach(TEST TESTS)
 set_tests_properties(${TESTS} PROPERTIES SKIP_RETURN_CODE 77 TIMEOUT 3600) # autoconf's setting
 set_tests_properties(${TESTS} PROPERTIES ENVIRONMENT "LC_COLLATE=C;GDL_PATH=${BASE_SOURCE}/testsuite/;${BASE_SOURCE}/src/pro/;GDL_STARTUP=;IDL_STARTUP=")
